...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(widget.bookId == null ? 'Dodaj książkę' : 'Edytuj książkę'),
      ),
      body: BlocConsumer<AddBookBloc, AddBookState>(
        listener: (context, state) {
          // Aktualizuj listę gatunków gdy zostaną załadowane
          if (state is AddBookReady) {
            setState(() {
...
                            strokeWidth: 2,
                            color: Colors.white,
                          ),
                        )
                      : const Icon(Icons.save),
                  label: Text(
                    widget.bookId == null ? 'Dodaj książkę' : 'Zapisz zmiany',
                  ),
                  style: FilledButton.styleFrom(
                    minimumSize: const Size.fromHeight(50),
                  ),
                ),
                const SizedBox(height: 8),
...
